--- a/Unit_3/css/style.css
+++ b/Unit_3/css/style.css
@@ -1,7 +1,11 @@
 body {
-	text-align: center; 
 	background: url("images/ivywall.jpg");
-	background-color: cover;
-	color: blue;
-	font-family: Arial, sans-serif;
+	background-size: cover;
+	text-align: center;
+	color: #09BD50;
+	font-family: Helvetica, sans-serif;
+
+}
+
+hr {width: 300px;
 }
